# borg-viewer

./: .gitignore  Makefile.in  PKG-INFO  README.md  configure  configure.ac  friv.py  setup.py  setup.py.in
data/: Makefile.am  Viewer.desktop.in  borg-viewer.desktop  borg-viewer.desktop.in
data/icons/hicolor/: Makefile.am
data/icons/hicolor/128x128/apps/: Makefile.am
src/: Makefile.am  viewer.in
src/Viewer/: Makefile.am  __init__.py  main.py
src/borgviewer/: application.py
